--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,12 @@
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-image: url(https://www.meme-arsenal.com/memes/6b7c4afdd63a4ead2067ea758c73e3d1.jpg);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  padding: 100px 0;
+}
+
 .input {
   display: block;
   border: none;
@@ -11,7 +20,7 @@
 .input:focus {
   outline: none;
   box-shadow: inset 0 2px 0 rgba(0, 0, 0, 0.2), 0 0 4px rgba(0, 0, 0, 0.1),
-  0 0 5px 1px #150f56;
+    0 0 5px 1px #150f56;
 }
 
 /* кнопки */
@@ -26,7 +35,7 @@ button {
   border-radius: 4px;
   transition: all 0.3s ease-out;
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5),
-  0 2px 2px rgba(0, 0, 0, 0.3), 0 0 4px 1px rgba(0, 0, 0, 0.2);
+    0 2px 2px rgba(0, 0, 0, 0.3), 0 0 4px 1px rgba(0, 0, 0, 0.2);
   /* Font styles */
   text-decoration: none;
   text-shadow: 0 1px rgba(255, 255, 255, 0.7);
@@ -131,7 +140,7 @@ li a {
   text-decoration: none;
 }
 
-.privet{
+.privet {
   display: block;
   color: white;
   text-align: center;
@@ -151,15 +160,32 @@ li:last-child {
   border-right: none;
 }
 
-
-
-.registration, h4, h1{
+.registration,
+h4,
+h1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-self: center;
 }
 
+.aaaa {
+  position: absolute;
+  top: 45%;
+  left: 10%;
+  font-size: 50px;
+  text-align: center;
+  color: rgb(3, 3, 211);
+  /* justify-content: center;
+  align-self: center; */
+}
+.otvet {
+  font-size: 30px;
+
+}
+.add {
+  font-size: 30px;
+}
 /* nav {
   background-color: #333; 
   padding: 10px; 
@@ -188,7 +214,6 @@ a {
 
 a:hover {
   color: #ffcc00; 
-} */ 
-
+} */
 
 /* инпуты */
